test/lexer/error/err_12_integer_overflow.pl0
const x = 99999999999999999999;